--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,5 @@
 *{
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
 }
 
 body {
@@ -16,11 +14,10 @@ body {
 div.container {
   background: linear-gradient(to bottom, #0f7070 10%, #002323 90%);
   border: 1px solid #002323;
-  border-radius: 25px;
+  border-radius: 15px;
   box-shadow: 1px 1px 10px #000;
   margin: 40px auto;
   max-width: 300px;
-  opacity: 0.8;
 }
 
 footer p {
@@ -70,7 +67,7 @@ form.search-engine {
   border: 1px solid #000;
   box-shadow: 1px 1px 10px #000;
   padding: 5px 7px;
-  border-radius: 10px;
+  border-radius: 8px;
 }
 
 .btn-weather:hover {
@@ -122,14 +119,14 @@ div.day-weather {
 }
 
 .current-temp {
-  font-size: 35px;
+  font-size: 40px;
   font-weight: 400;
   margin: 20px 0 auto;
 }
 
 .low-temp,
 .high-temp {
-  font-size: 10px;
+  font-size: 12px;
   position: relative;
   top: 40px;
 }
@@ -143,6 +140,10 @@ img#icon {
   transform: scale(1.2) perspective(1500px) rotateX(2deg);
   transition: all 150ms ease;
   cursor: pointer;
+}
+
+#weather-desc{
+  text-transform: capitalize;
 }
 
 div.units {
@@ -192,19 +193,32 @@ hr {
 
 /* WEATHER NEXT 5 DAYS */
 
-div.forecast {
-  margin: 20px;
+div.weather-forecast {
+  margin: 10px 10px 20px 10px;
+  text-align: center;
 }
 
-div.col-sm {
-  text-align: center;
-  font-size: 10px;
+#forecast {
+  justify-content: space-between;
+}
+
+.weather-forecast h3 {
+  font-size: 12px;
   padding: 0;
+  text-align: center;
+  margin: 0 auto;
 }
 
-img#forecast-icon{
-  display: block;
-  width: 40px;
+.forecast-temperature {
+  font-size: 12px;
   text-align: center;
 }
+
+.weather-forecast img {
+  width: 40px;
+  height: 40px;
+  display: block;
+  margin: 0 auto;
+}
+
 
